added comments to index and css files for clearer viewing and understanding.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+    <!--Header-->
     <header class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
         <div>
@@ -27,9 +28,9 @@
         </div>
 
     </header>
-
+    <!--Hero banner-->
     <div class="hero"></div>
-
+    <!--Main Content / What we do-->
     <section class="content">
         <div id="search-engine-optimization" class="block-content">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
@@ -59,7 +60,7 @@
             </p>
         </div>
     </section>
-
+    <!--Benedits section-->
     <section class="benefits">
         <div id="benefit-lead" class="benefit">
             <h3 class="benefit-heading">Lead Generation</h3>
@@ -86,7 +87,7 @@
             </p>
         </div>
     </section>
-
+    <!--Footer-->
     <footer class="footer">
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
